fixed image cropping issue

--- a/style.css
+++ b/style.css
@@ -169,7 +169,8 @@ nav {
 .plate-content
 .plate-content video,
 .plate-content iframe,
-.plate-content text{
+.plate-content text,
+.plate-content img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -182,6 +183,7 @@ audio {
 	inline-size: 110%;
     margin-top: 3rem;
 }
+
 
 /* make text scrollable */
 /* .text-block {
